# AlexiproOtus1

./: .travis.yml  CMakeLists.txt  README.md  bintray-descriptor.json  lib.cpp  lib.h  main.cpp  test_version.cpp
.github/workflows/: ccpp.yml
